--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>porsche</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <nav>
-            <a href="#">menu</a>
-            <a href="#">user</a>
-            <h1>porsche</h1>
-            <img src="porsche/A race track with a sunset in the background _ Premium AI-generated image.jpeg" alt="image" srcset="image">
+
+            <li>
+                <a href="#"><i class="material-icons">menu</i></a>
+                <a href="#"><i class="material-icons">account_circle</i></a>
+                <h1>porsche</h1>
+            </li>
+
         </nav>
+
 
     </div>
     <div class="container1"></div>
     <div class="container2"></div>
 </body>
-
