script file added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li>
                 <a href="#"><i class="material-icons">menu</i></a>
                 <a href="#"><i class="material-icons">account_circle</i></a>
-                <h1>porsche</h1>
+                <h1 id="logo">porsche</h1>
             </li>
 
         </nav>
@@ -25,4 +25,5 @@
     </div>
     <div class="container1"></div>
     <div class="container2"></div>
+    <script src="script.js"></script>
 </body>
