--- a/index.html
+++ b/index.html
@@ -16,14 +16,24 @@
             <li>
                 <a href="#"><i class="material-icons">menu</i></a>
                 <a href="#"><i class="material-icons">account_circle</i></a>
-                <h1 id="logo">porsche</h1>
+              <h1>porsche</h1>
             </li>
 
         </nav>
 
 
     </div>
-    <div class="container1"></div>
-    <div class="container2"></div>
+    <div class="container1">
+        <h1>911</h1>
+        <p>The iconic, rear-engine sport car with exceptional perfomance.</p>
+        <h3>from $ 127,700*</h3>
+        <button>build your 911</button>
+    </div>
+    <div class="container2">
+         <h1>718</h1>
+        <p>The mid engin sport car for two mandefor pure drving plesure</p>
+        <h3>from $ 72,800*</h3>
+        <button>build your 911</button>
+    </div>
     <script src="script.js"></script>
 </body>
